commented out empty ruleset

--- a/src/components/layout/navbar/bottomNavbar/styles.module.css
+++ b/src/components/layout/navbar/bottomNavbar/styles.module.css
@@ -65,8 +65,8 @@
   @apply absolute top-[22px] right-[22px];
 }
 
-.hideInSmallScreen {
-}
+/* .hideInSmallScreen { */
+/* } */
 
 .hideInBigScreen {
   @apply hidden;
